--- a/style.css
+++ b/style.css
@@ -18,19 +18,23 @@ html{
   color : #ffffff;
 }
 .info{
-  width: 40%
+  width: 400px;
 }
 .config{
-  width: 20%;
+  width: 200px;
+}
+.object-form{
+  background-color: #34495e;
+  padding: 5px;
+  border-radius: 100px;
 }
 
 .box-area{
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
+  left: 5%;
   width: 90%;
   height: 102%;
-  overflow: hidden;
 }
 .box-area li{
   position: absolute;
