--- a/style.css
+++ b/style.css
@@ -28,9 +28,24 @@ html{
   padding: 5px;
   border-radius: 100px;
 }
+.object-button{
+  background-color: #1abc9c;
+  border-radius: 100px;
+  padding: 10px;
+  color: #ffffff;
+  border: none;
+  width: 60%;
+  margin: 5px;
+  cursor: pointer;
+}
 
-.box-area{
+.animation-area{
   position: fixed;
+  width: 100%;
+  height: 101vh;
+}
+.box-area{
+  position: absolute;
   top: 0;
   left: 5%;
   width: 90%;
@@ -38,12 +53,11 @@ html{
 }
 .box-area li{
   position: absolute;
-  display: block;
   list-style: none;
   width: 25px;
   height: 25px;
   background: rgba(255, 255, 255, 0.2);
-  animation: animate 15s linear infinite;
+  animation: animate 10s linear infinite;
   bottom: -130px;
 }
 .box-area li:nth-child(1){
