--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ html{
 .object-form{
   background-color: #34495e;
   padding: 5px;
-  border-radius: 100px;
 }
 .object-button{
   background-color: #1abc9c;
@@ -45,6 +44,7 @@ html{
   transform: translateY(5px);
   border: none;
   margin-bottom: 10px;
+  box-shadow: inset 0px 10px 3px #16a085;
 }
 
 .animation-area{
